google: Report FS total size and free space

If libgdata 0.17.9 is available, use its new metadata API to query filesystem
size and free space and report it back.

https://bugzilla.gnome.org/show_bug.cgi?id=785870